# GalleryNet

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  person_handlers.rs  reset_faces.ps1
assets/: index.html
assets/models/: version-slim-320.onnx
docs/: AUTOTAGGING.md  PEOPLE_DETECTION.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.test.ts  api.ts  auth.ts  events.ts  index.css  main.tsx  types.ts  useWebSocket.test.ts  useWebSocket.ts
frontend/src/components/: AlertDialog.tsx  ConfirmDialog.tsx  FaceThumbnail.tsx  GalleryView.interactions.test.tsx  GalleryView.test.tsx  GalleryView.tsx  Icons.tsx  LibraryInfo.tsx  LoadingIndicator.tsx  LoginView.tsx  MediaCard.tsx  MediaModal.test.tsx  MediaModal.tsx  PeopleView.test.tsx  PeopleView.tsx  SearchView.tsx  Sidebar.tsx  TagFilter.tsx  TagInput.tsx
frontend/src/hooks/: useTheme.ts
scripts/: clean_models.py  inspect_model.py  mobilenetv3_export.py  verify.ps1  verify.sh
src/: main.rs
src/application/: delete.rs  external_search.rs  face_group.rs  face_search_test.rs  group.rs  list.rs  maintenance.rs  maintenance_test.rs  mod.rs  processor.rs  scan_faces.rs  search.rs  tag_learning.rs  tasks.rs  upload.rs
src/domain/: mod.rs  models.rs  ports.rs
src/infrastructure/: mod.rs  ort_processor.rs  phash_generator.rs  sqlite_repo.rs
src/infrastructure/sqlite_repo/: embeddings.rs  faces.rs  folders.rs  media.rs  mod.rs  tags.rs
src/presentation/: api.rs  auth.rs  mod.rs
