[package]
name = "gallerynet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sqlite-vec = "0.1"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "download-binaries"] }
image = "0.25"
image_hasher = "3.1"
ndarray = "0.17"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
mime = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
exif = { package = "kamadak-exif", version = "0.6.1" }
zip = { version = "2", default-features = false, features = ["deflate"] }
mime_guess = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
rayon = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[profile.dev]
opt-level = 1  # Enables basic optimizations + auto-vectorization in dev builds

[profile.release]
opt-level = 3
lto = "thin"