[package]
name = "gallerynet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }

tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sqlite-vec = "0.1"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "download-binaries"] }
image = "0.25"
image_hasher = "3.1"
ndarray = "0.15"
ndarray017 = { package = "ndarray", version = "0.17" }
linfa = "0.7"
linfa-svm = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
mime = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
exif = { package = "kamadak-exif", version = "0.6.1" }
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio-util = { version = "0.7", features = ["io-util", "io"] }
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
mime_guess = "2"
futures-util = { version = "0.3", features = ["io"] }

sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
rayon = "1"
mimalloc = "0.1"

[dev-dependencies]

tokio-tungstenite = "0.26"
futures = "0.3"


[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

